# -

./: .gitignore  Cargo.toml  GOVERNANCE_RECOVERY_ROOT.md  PHASE13_FREEZE.md  PHASE14_FREEZE.md  PHASE18_FREEZE.md  PHASE25_FREEZE.md  smoke_test_playwright.py
python/: PHASES_21_24_COMPLIANCE_SUMMARY.md  PHASES_21_24_RISK_REGISTER.md  PHASE_GOVERNANCE.md  phase_security_remediation_report.md  pyproject.toml
python/artifact_scanner/: ARCHITECTURE.md  PHASE5_FREEZE.md  __init__.py  aggregator.py  errors.py  loader.py  scanner.py  types.py
python/bounty_pipeline/: ARCHITECTURE.md  __init__.py  adapters.py  audit.py  duplicate.py  errors.py  pipeline.py  program.py  recovery.py  report.py  review.py  scope.py  status.py  submission.py  types.py  validator.py
python/browser_assistant/: PHASE9_FREEZE.md  PHASE9_GOVERNANCE.md  __init__.py  assistant.py  boundaries.py  confirmation.py  context.py  draft_generator.py  duplicate_hint.py  errors.py  observer.py  phase9_audit_report.md  scope_check.py  types.py
python/browser_shell/: __init__.py  audit_storage.py  audit_types.py  decision.py  evidence.py  hash_chain.py  report.py  scope.py  session.py  suggestion.py
python/cyfer_brain/: ARCHITECTURE.md  __init__.py  boundary.py  brain.py  client.py  errors.py  explorer.py  feedback.py  hypothesis.py  orchestrator.py  parallel.py  retry.py  strategy.py  types.py
python/decision_workflow/: ARCHITECTURE.md  PHASE6_FREEZE.md  __init__.py  audit.py  boundaries.py  decisions.py  errors.py  queue.py  roles.py  session.py  types.py
python/execution_layer/: ARCHITECTURE.md  LIMITATIONS.md  PHASE04_SECURITY_REMEDIATION_REPORT.md  PHASE4_1_INTEGRATION1_TEST_REPORT.md  PHASE4_1_INTEGRATION2_TEST_REPORT.md  PHASE4_1_INTEGRATION3_TEST_REPORT.md  PHASE4_1_INTEGRATION4_TEST_REPORT.md  PHASE4_1_INTEGRATION5_TEST_REPORT.md  PHASE4_1_TRACK1_IMPLEMENTATION_REPORT.md  PHASE4_1_TRACK2_IMPLEMENTATION_REPORT.md  PHASE4_1_TRACK3_IMPLEMENTATION_REPORT.md  PHASE4_1_TRACK4_IMPLEMENTATION_REPORT.md  PHASE4_1_TRACK5_IMPLEMENTATION_REPORT.md  PHASE4_INTEGRATION_PLAN.md  SECURITY_REMEDIATION_REPORT.md  __init__.py  actions.py  anti_detection.py  approval.py  audit.py  browser.py  browser_failure.py  browser_launcher.py  controller.py  domainallowlist.py  duplicate.py  errors.py  evidence.py  manifest.py  manifest_store.py  mcp_client.py  payloadguard.py  phase4_1_implications_report.md  phase4_hardening_audit_report.md  pipeline_client.py  policy.py  recovery.py  retention.py  (+10 more)
(+723 files in other folders)
